# markdown-reviewer

./: .editorconfig  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  biome.json  components.json  design.pen  index.html  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: i18n-guardian.md  react-feature-builder.md  rust-core-architect.md
.claude/commands/: check-i18n.md  new-feature.md  new-tauri-command.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/application/: mod.rs
crates/core/src/application/comments/: crud.rs  mod.rs  submit.rs
crates/core/src/application/files/: mod.rs  read_markdown_file.rs
crates/core/src/application/pull_requests/: changed_files.rs  file_diff.rs  list.rs  load.rs  mod.rs
crates/core/src/application/repo_selection/: check_tools.rs  mod.rs  recents.rs  validate_repository.rs
crates/core/src/domain/: changed_file.rs  comment.rs  file_diff.rs  mod.rs  pull_request.rs  repository.rs  tool_status.rs
crates/core/src/ports/: clock.rs  comments_store.rs  gh.rs  git.rs  mod.rs  recents_store.rs
crates/core/tests/: comments_submit.rs  files.rs  pull_requests.rs  repo_selection.rs
crates/infra/: Cargo.toml
crates/infra/src/: clock.rs  lib.rs  logging.rs  paths.rs
crates/infra/src/gh/: gh_cli.rs  mod.rs
crates/infra/src/git/: git_cli.rs  mod.rs
crates/infra/src/process/: mod.rs  redact.rs
crates/infra/src/sqlite/: comments_store.rs  connection.rs  mod.rs  recents_store.rs
crates/infra/src/sqlite/migrations/: 0001_recents.sql  0003_local_comments.sql
crates/infra/tests/: git_cli.rs  phase1_e2e.rs  sqlite_comments.rs  sqlite_recents.rs
crates/infra/tests/common/: mod.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: dto.rs  lib.rs  state.rs
crates/ipc/src/commands/: comments.rs  files.rs  mod.rs  pull_requests.rs  recents.rs  repo.rs  tools.rs
docs/: README.md
docs/guides/: github-integration.md  markdown-rendering.md
docs/product/: comment-states.md  onboarding-flow.md
docs/rfc/: 0001-comment-anchoring.md  0002-pr-cache-strategy.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bootstrap.rs  lib.rs  main.rs
src/app/: App.tsx  NotFound.tsx  error-boundary.tsx  providers.tsx  routes.tsx
src/features/comments/: index.ts
src/features/comments/components/: CommentComposer.tsx  InlineThreadCard.tsx  InlineThreads.tsx  MinimizedThreadBadge.tsx  SelectionCommentOverlay.tsx
src/features/comments/hooks/: useCreateComment.ts  useFileComments.ts  useGhUser.ts  usePullRequestComments.ts
src/features/comments/lib/: groupAnchors.ts  selectionToAnchor.ts
src/features/file-explorer/: index.ts
src/features/file-explorer/components/: ChangeStatusDot.tsx  FileTree.tsx  FileTreeNode.tsx  FileTreeSearch.tsx
src/features/file-explorer/hooks/: useChangedFiles.ts
src/features/file-explorer/lib/: buildTree.ts  filterFiles.ts
src/features/file-explorer/routes/: PullRequestPage.tsx
src/features/main/: index.ts
src/features/main/components/: AppHeader.tsx  PreviewSlot.tsx  Rail.tsx  RefreshButton.tsx  SidebarShell.tsx  ThreadsPane.tsx  Toolbar.tsx
src/features/main/hooks/: usePullRequestTitle.ts  useRepoContext.ts
src/features/markdown-preview/: index.ts
src/features/onboarding/: index.ts
src/features/pull-requests/: index.ts
src/features/settings/: index.ts
src/shared/hooks/: useDebouncedValue.ts
src/shared/i18n/: index.ts
src/shared/ipc/: client.ts  contract.ts  errors.ts
src/shared/lib/: logger.ts
src/shared/stores/: useLastPullRequest.ts  useMinimizedThreads.ts  useSelectedThread.ts  useSidebarWidth.ts
src/shared/styles/: index.css  tokens.css
src/shared/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  resizable.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
(+40 files in other folders)
