[workspace]
resolver = "2"
members = ["src-tauri", "crates/core", "crates/infra", "crates/ipc"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["serde", "formatting"] }
tempfile = "3"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"

markdown-reviewer-core = { path = "crates/core" }
markdown-reviewer-infra = { path = "crates/infra" }
markdown-reviewer-ipc = { path = "crates/ipc" }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic lints that fight us more than they help
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_lines = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
