[package]
name = "markdown-reviewer-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
