[package]
name = "markdown-reviewer-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
markdown-reviewer-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rusqlite = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
