[package]
name = "markdown-reviewer-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
markdown-reviewer-core = { workspace = true }
markdown-reviewer-infra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
